# icatcher_plus

./: .gitattributes  .gitignore  MANIFEST.in  README.md  data.py  environment.yml  icatcher.yml  options.py  parsers.py  particle_filter.py  preprocess.py  pyproject.toml  test.py  video.py  visualize.py
.github/workflows/: bump_version.yml  formatter.yml  icatcher.yml  publish.yml  pylint.yml  test.yml  test_ui.yml  tmp  tmp.yml
docker/: Dockerfile  README.md  preload_models.py
face_classifier/: fc_data.py  fc_eval.py  fc_train.py
interface/: README.md  package-lock.json  package.json  server.js
interface/frontend/: index.html
interface/frontend/preprocessing_tool/: index.html
interface/frontend/results_tool/: index.html  package-lock.json  package.json
reproduce/: README.md  augmentations.py  data.py  environment.yml  face_detector.py  face_rec.py  logger.py  models.py  options.py  preprocess.py  test.py  test_face_detector.py  train.py  util.py  visualize.py
reproduce/face_classifier/: fc_data.py  fc_eval.py  fc_model.py  fc_train.py
reproduce/statistics/: 01_Generate-Split_March.Rmd  01_Generate_Split.Rmd  02_Move-files-for-QI.Rmd  02_Move-files-for-QI.html  training_data_info.csv
reproduce/tests/: test_face_detector.py
resource/lookit_annotations/coding_human1/: 2a55f9b0-0556-4084-8a3e-057aaf3c1cb0.txt  3b06a4a1-a038-412a-999a-ca30c783aeca.txt  44b7ba3e-c527-45af-9ae3-4eaff46ee8aa.txt  61ff9a5e-ed87-49c1-b0a4-afbd23144150.txt  66199494-2a1b-48bf-b4be-2fd700fb60ab.txt  6aae6ca3-a424-42db-9f67-0e4cc87bca25.txt  75d5aaa7-c8f2-497a-be33-0c4addda88f7.txt  7b0a97df-6539-4f9b-a64a-c67f435118b9.txt  815ab515-e17b-4e89-9601-12856e761ad7.txt  88673831-ec33-4eb3-b031-e99047d8adc0.txt  93fa1fed-c51c-4c8c-9e5b-fb89c57628a2.txt  96e950cc-0dcb-4707-9d02-6714b3509b03.txt  9dc9c1b5-1b08-4b8a-b024-47857b000653.txt  9f49323f-6238-4cdf-a9ac-957d08d19550.txt  a5804600-5a20-48ad-8caa-e91fb6baf6cf.txt  a79f532a-a767-4cac-8023-d6a4c03d8ccf.txt  a861aabe-1b1c-484d-98d9-86700d7a9ea8.txt  acb9b56b-84d3-463c-9722-cd70130ab766.txt  aea8288f-dd2f-438e-9f1f-1c1f1d192072.txt  afaa5ea5-a824-4d89-acbc-91fad14508a8.txt  (+2 more)
src/icatcher/: __init__.py  cli.py  draw.py  face_detector.py  models.py  options.py  parsers.py  ui_packaging.py  video.py
statistics/: 01_Generate_Split.html  03_Figures_AgreementAnalysis.Rmd  03_Figures_AgreementAnalysis.html  bootstrap.py  codebook.Rmd  readme.MD  training_data_info.csv
tests/: __init__.py  test_basic.py  test_face_detector.py  test_face_model.py  test_facerec.py  test_folders.py  test_gaze_model.py  test_imports.py
tests/test_data/: illegal_transitions_bad1.csv  illegal_transitions_bad2.csv  illegal_transitions_bad3.csv  illegal_transitions_good.csv  illegal_transitions_short.csv  test_short_illegal_result.txt  test_short_result.txt  test_video_manual_annotation.csv
tests/video_test/: test_video_manual_annotation.csv
(+215 files in other folders)
