[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "icatcher"
version = "0.0.6"
description = "iCatcher+: Robust and automated annotation of infant gaze from videos collected in laboratory, field, and online studies."
readme = "README.md"
authors = [{ name = "Yotam Erel", email = "erelyotam@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["eyetracker", "eyetracking"]
dependencies = [
    "torch>=1.11.0",
    "torchvision>=0.12",
    "numpy",
    "Pillow", 
    "scipy",
    "ffmpeg-python",
    "opencv-python",
    "pooch",
    "face-detection@git+https://github.com/elliottzheng/face-detection.git",
    "pandas",
    "gdown",
    "pathos",
    "scipy",
    "tqdm",
    "face-recognition"
]
requires-python = ">=3.9"

[project.scripts]
icatcher = "icatcher.cli:main"

[project.optional-dependencies]
build = ["build", "twine"]
dev = ["bumpver", "pytest"]

[project.urls]
Homepage = "https://github.com/yoterel/icatcher_plus"

[tool.bumpver]
current_version = "0.0.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/icatcher/__init__.py" = [
    "{version}"
]
